--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -71,6 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Lab_14
+main.class=Avto.Main
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
